[package]
name = "rgb-idf"
version = "0.1.0"
authors = ["Ian Graham <irgraham1@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.31.11", features = ["binstart", "pio"] }
esp-idf-hal = "*"

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
